@@ -1,4 +1,4 @@
-# $PostgreSQL: pgsql/src/interfaces/ecpg/compatlib/exports.txt,v 1.3 2007/10/04 16:29:33 meskes Exp $
+# $PostgreSQL: pgsql/src/interfaces/ecpg/compatlib/exports.txt,v 1.4 2007/10/04 17:49:31 meskes Exp $
 # Functions to be exported by ecpg_compatlib DLL
 ECPG_informix_get_var   1
 ECPG_informix_set_var   2
@@ -41,3 +41,4 @@ rtypwidth               38
 rupshift                39
 ldchar                  40
 byleng                  41
+ECPG_informix_reset_sqlca	42
